--- a/style.css
+++ b/style.css
@@ -28,4 +28,10 @@ body {
 
 img{
   width: 100%;
+
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
